--- a/Contactinfo.html
+++ b/Contactinfo.html
@@ -4,9 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>My Contact Details</title>
+
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
-<h2>Contact Information</h2>
+<h3>Contact Information</h3>
 
 <hr>
 
