--- a/Hobbies.html
+++ b/Hobbies.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>The Feature</title>
+
+  <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>Hobbies & Matches</h3>
