--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>♘Carlos D'Angelo</title>
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
+
   <table cellspacing="20" <tr>
     <td><img src="Carlos.jpg" alt "Carlos Profile Pic"></td>
     <td>
@@ -25,7 +28,7 @@
 
 
 
-</body>
+
 <p><em>Front End Web Developer</em></p>
 
 <p>
@@ -119,5 +122,7 @@
     </tr>
   </table cellspacing="10">
 </p>
+
+</body>
 
 </html>
