--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <table cellspacing="20" <tr>
-    <td><img src="Carlos.png" alt "Carlos Profile Pic"></td>
+    <td><img src="Carlos.jpg" alt "Carlos Profile Pic"></td>
     <td>
       <h1>Hi, I'm Carlos D'Angelo</h1>
       <p>
