--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
       </thread>
       <tbody>
         <tr>
+
+          <td>2001-2016</td>
+          <td>Professional Wrestler and Trainer</td>
+        </tr>
+        <tr>
           <td>
             2010-2011
           </td>
@@ -85,10 +90,16 @@
           <td>2011-2012</td>
           <td>MediaCom - Senior Account Executive</td>
         </tr>
+
         <tr>
 
-          <td>2001-2018</td>
-          <td>Professional Wrestler and Trainer</td>
+          <td>2013-2017</td>
+          <td>Singular Payment Processing - Processing Specialist</td>
+        </tr>
+        <tr>
+
+          <td>2017-2019</td>
+          <td>PNC Bank - Merchant Banker</td>
         </tr>
 
       </tbody>
@@ -117,6 +128,10 @@
       </tr>
       <tr>
         <td>Javascript</td>
+        <td>💪💪</td>
+      </tr>
+      <tr>
+        <td>iOS & Swift</td>
         <td>💪💪</td>
       </tr>
     </table cellspacing="10">
