--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <table cellspacing="20" <tr>
 
-    <img src="Carlos.jpg" alt "Carlos Profile Pic" class="center">
+    <img src="Carlos.jpg" alt "Carlos Profile Pic" class="circular--square">
     <td>
       <h1>Hi, I'm Carlos D'Angelo</h1>
       <p>
