--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
 
-<body onload="alert('Hello, welcome to my website');">
+<body>
 
   <table cellspacing="20" <tr>
 
@@ -48,10 +48,7 @@
       <li>
         HTML
       </li>
-      <li>
-        CSS
-      </li>
-      <li>Bootstrap</li>
+      <li>CSS </li>
       <li>Javascript</li>
       <li>iOS12</li>
       <li>Swift</li>
@@ -60,9 +57,7 @@
     <ul>
       <a href="Hobbies.html">My Hobbies and Matches</a>
     </ul>
-    <ul>
-      <a href="Contactinfo.html">My Contact Info</a>
-    </ul>
+
 
     <hr />
 
@@ -136,7 +131,7 @@
       </tr>
     </table cellspacing="10">
   </p>
-
+  <a href="Contactinfo.html" class="myButton">Contact Me</a>
 </body>
 
 </html>
